update versi node-forge

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "cssnano": "^4.1.10",
     "gh-pages": "^2.2.0",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "node-forge": ">=0.10.0"
   },
   "homepage": "https://ezrakhairanpermana.github.io/presentasi-coronavirus-85"
 }
