--- a/package.json
+++ b/package.json
@@ -3,24 +3,20 @@
   "version": "1.0.0",
   "main": "index.html",
   "scripts": {
-    "start": "parcel index.html",
-    "predeploy": "parcel build index.html --public-url ./",
-    "deploy-pages": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "repository": "https://github.com/EzraKhairanPermana/presentasi-corona-ips-85.git",
   "author": "Ezra Khairan Permana",
   "license": "MIT",
   "description": "Tugas Presentasi Kelas 85 SMPN 13 Bekasi | Bu Lestari",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.1",
     "chart.js": "^2.9.4",
     "webslides": "^1.5.0"
   },
   "devDependencies": {
-    "cssnano": "^4.1.10",
     "gh-pages": "^3.1.0",
-    "node-forge": ">=0.10.0",
-    "parcel-bundler": "^1.12.4"
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0"
   },
   "homepage": "https://ezrakhairanpermana.github.io/presentasi-coronavirus-85"
 }
