--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.html",
   "scripts": {
+    "dev": "webpack --mode development",
+    "serve": "webpack serve --mode development",
+    "build": "webpack --mode production",
+    "rebuild": "npm rebuild",
     "deploy": "gh-pages -d dist"
   },
   "repository": "https://github.com/EzraKhairanPermana/presentasi-corona-ips-85.git",
@@ -10,13 +14,23 @@
   "license": "MIT",
   "description": "Tugas Presentasi Kelas 85 SMPN 13 Bekasi | Bu Lestari",
   "dependencies": {
+    "axios": "^0.21.1",
     "chart.js": "^2.9.4",
+    "intersection-observer": "^0.12.0",
     "webslides": "^1.5.0"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.2.0",
+    "file-loader": "^6.2.0",
     "gh-pages": "^3.1.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.1",
+    "mini-css-extract-plugin": "^1.3.4",
     "webpack": "^5.18.0",
-    "webpack-cli": "^4.4.0"
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "homepage": "https://ezrakhairanpermana.github.io/presentasi-coronavirus-85"
 }
