--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.4",
+    "purgecss-webpack-plugin": "^4.0.0",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
