--- a/package.json
+++ b/package.json
@@ -1,37 +1,35 @@
 {
   "name": "ppt-ips-coronavirus-85",
   "version": "1.0.0",
-  "main": "src/index.html",
   "scripts": {
-    "dev": "webpack --mode development",
-    "serve": "webpack serve --mode development",
     "build": "webpack --mode production",
-    "rebuild": "npm rebuild",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "repository": "https://github.com/reacto11mecha/presentasi-corona-ips-85.git",
   "author": "Ezra Khairan Permana",
   "license": "MIT",
   "description": "Tugas Presentasi Kelas 85 SMPN 13 Bekasi | Bu Lestari",
+  "homepage": "https://reacto11mecha.github.io/presentasi-corona-ips-85",
   "dependencies": {
     "axios": "^0.21.1",
-    "chart.js": "^2.9.4",
-    "intersection-observer": "^0.12.0",
+    "chart.js": "^3.2.1",
     "webslides": "^1.5.0"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.1",
-    "css-minimizer-webpack-plugin": "^1.2.0",
-    "file-loader": "^6.2.0",
+    "clean-webpack-plugin": "*",
+    "css-loader": "^5.2.4",
+    "css-minimizer-webpack-plugin": "^2.0.0",
     "gh-pages": "^3.1.0",
-    "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.5.1",
-    "mini-css-extract-plugin": "^1.3.4",
-    "purgecss-webpack-plugin": "^4.0.0",
-    "webpack": "^5.18.0",
-    "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "homepage": "https://reacto11mecha.github.io/presentasi-corona-ips-85"
+    "html-webpack-plugin": "^5.3.1",
+    "image-minimizer-webpack-plugin": "^2.2.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-svgo": "^9.0.0",
+    "mini-css-extract-plugin": "^1.6.0",
+    "purgecss-webpack-plugin": "^4.0.3",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.7.0"
+  }
 }
