--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ppt-ips-coronavirus-85",
   "version": "1.0.0",
   "scripts": {
+    "dev": "webpack serve --mode development",
     "build": "webpack --mode production",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
@@ -30,6 +31,7 @@
     "purgecss-webpack-plugin": "^4.0.3",
     "style-loader": "^2.0.0",
     "webpack": "^5.36.2",
-    "webpack-cli": "^4.7.0"
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
